--- a/myapp/templates/profile_book/index.html.twig
+++ b/myapp/templates/profile_book/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    .example-wrapper { margin: 1em auto; max-width: 1000px; width: 95%; font: 18px/1.5 sans-serif; }
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
     img {
         width: 20rem;
@@ -12,7 +12,12 @@
         object-fit: cover;
     }
     .flexer {
-        
+        display: flex;
+        justify-content: space-between;
+        gap: 5rem;
+    }
+    .flexer-img {
+        width: 20rem;
     }
 </style>
 
@@ -20,8 +25,10 @@
     <h1>{{ book.title }}</h1>
 
     <div class="flexer">
-        <img src="/uploads/{{ book.imgurl }}" alt="{{ book.title }}">
-        <div>
+        <div class="flexer-img">
+            <img src="/uploads/{{ book.imgurl }}" alt="{{ book.title }}">
+        </div>
+        <div class="text">
             <p>{{ book.title }}</p>
             <p>{{ book.description }}</p>
             <p>{{ book.author }}</p>
